versioned_docs/version-1.0.0/tools-workflows/overview.md
---
sidebar_position: 1
---

# AI Coding Tools Overview

A quick look at the most popular AI coding assistants available.

> Last reviewed: February 26, 2026. Tool names, links, and product capabilities can change quickly.

## API Platforms

| Platform | Description |
|----------|-------------|
| [**Anthropic API**](https://docs.anthropic.com/en/api/getting-started) | Access to Claude models for building AI-powered coding tools and applications |
| [**OpenAI API**](https://platform.openai.com/docs) | Access to GPT and Codex models for code generation, editing, and analysis |
| [**Google Gemini API**](https://ai.google.dev/docs) | Access to Gemini models for building generative AI coding applications |
| [**Blablador**](https://sdlaml.pages.jsc.fz-juelich.de/ai/guides/blablador_api_access/) | Access to models hosted by Blablador for building generative AI coding applications |

<p><small>Not all models hosted by Blablador are trained by [JSC](https://www.fz-juelich.de/en/jsc), you can check the model details to look for the ones trained by [JSC AI team](https://sdlaml.pages.jsc.fz-juelich.de/ai/)</small></p>

## CLI Tools

| Tool | Description |
|------|-------------|
| [**Claude Code**](https://docs.anthropic.com/en/docs/claude-code/overview) | Anthropic's CLI agent for code generation, debugging, and refactoring |
| [**OpenAI Codex CLI**](https://github.com/openai/codex) | OpenAI's terminal coding agent for editing, running, and reviewing code |
| [**Gemini CLI**](https://github.com/google-gemini/gemini-cli) | Google's command-line coding assistant for repo-aware development workflows |
| [**GitHub Copilot CLI**](https://github.com/github/copilot-cli) | Command-line interface for GitHub Copilot |
| [**OpenCode**](https://opencode.ai/) | OpenSource AI coding assistant for code generation, debugging, and refactoring |

<p><small>Use opencode for Blablador models https://sdlaml.pages.jsc.fz-juelich.de/ai/guides/blablador_opencode</small></p>

## IDE Extensions

| Tool | Description |
|------|-------------|
| [**GitHub Copilot**](https://github.com/features/copilot) | Inline code completions for VS Code, JetBrains, and more |
| [**Gemini Code Assist**](https://codeassist.google/) | Google's AI coding assistant for IDEs with code completion and chat |
| [**Cursor**](https://cursor.com/) | AI-first code editor built on VS Code |
| [**Windsurf**](https://windsurf.com/) | AI-powered IDE by Codeium |

<p><small>Use VsCode extension for Blablador models https://sdlaml.pages.jsc.fz-juelich.de/ai/guides/blablador_on_vscode</small></p>

## Chat-Based Assistants

| Tool | Description |
|------|-------------|
| [**Claude (Anthropic)**](https://claude.ai/) | General-purpose AI assistant with strong coding, analysis, and reasoning capabilities |
| [**ChatGPT (OpenAI)**](https://chatgpt.com/) | General-purpose AI assistant commonly used for code generation, debugging, and design help |
| [**Gemini (Google)**](https://gemini.google.com/) | General-purpose AI assistant useful for coding support, explanations, and refactoring ideas |
| [**Jan.ai**](https://www.jan.ai/) | General-purpose AI assistant with strong coding, analysis, and reasoning capabilities |

<p><small>Use jan.ai for Blablador models https://sdlaml.pages.jsc.fz-juelich.de/ai/guides/blablador_on_janai</small></p>

